--- a/res/layout/books_in_possession_list_layout.xml
+++ b/res/layout/books_in_possession_list_layout.xml
@@ -29,6 +29,7 @@
                 android:layout_height="wrap_content"
                 android:singleLine="true"
                 android:text="Return Date"
+                android:id="@+id/returndate_tv"
                 android:textColor="#ffff00" />
 
             <TextView
