--- a/res/layout/complaint_cell_name_layout.xml
+++ b/res/layout/complaint_cell_name_layout.xml
@@ -23,6 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scaleType="fitCenter"
+        android:visibility="invisible"
         android:src="@drawable/ic_delete" />
 
 </LinearLayout>
