--- a/res/layout/layout_library.xml
+++ b/res/layout/layout_library.xml
@@ -23,15 +23,11 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_marginLeft="10dip"
+            android:layout_marginRight="10dip"
+           
             android:background="@drawable/menu_bg"
             android:orientation="vertical" >
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/watermark"
-                android:orientation="vertical" >
 
                 <ListView
                     android:id="@+id/list"
@@ -39,12 +35,14 @@
                     android:layout_height="wrap_content"
                     android:cacheColorHint="#00000000" >
                 </ListView>
-            </LinearLayout>
+         
         </LinearLayout>
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dip"
+            android:layout_marginRight="10dip"
             android:layout_weight="1"
             android:background="#00000000" >
 
@@ -83,7 +81,7 @@
                         android:background="@drawable/editbox_background"
                         android:maxLines="1"
                         android:singleLine="true"
-                        android:text=" 81-7366-210-X" />
+                       />
                 </LinearLayout>
 
                 <LinearLayout
@@ -105,7 +103,7 @@
                         android:background="@drawable/editbox_background"
                         android:maxLines="1"
                         android:singleLine="true"
-                        android:text="MB00000001" />
+                        />
                 </LinearLayout>
 
                 <Button
