--- a/res/layout/layout_myaccount.xml
+++ b/res/layout/layout_myaccount.xml
@@ -37,190 +37,194 @@
                 android:background="@drawable/menu_bg"
                 android:gravity="center"
                 android:orientation="vertical" >
- <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dip"
-                android:layout_marginRight="10dip"
-                android:background="@drawable/watermark"
-                android:orientation="vertical" >
-                
-                <TableLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" >
-
-                    <TableRow
-                        android:id="@+id/TableRow04"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dip" >
-
-                        <TextView
-                            android:id="@+id/myacc_label_username"
-                            android:layout_width="0dip"
-                            android:layout_weight="1"
-                            android:layout_height="wrap_content"
-                            android:text="@string/username"
-                            android:textColor="#ffffff"
-                            android:textSize="15sp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:text=" :  "
-                            android:textColor="@android:color/white"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/myaccount_tv_username"
-                            style="@style/LatestUpdatesTextViews"
-                            android:paddingLeft="10dip" />
-                    </TableRow>
-
-                    <TableRow
-                        android:id="@+id/TableRow04"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dip" >
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:text="Credits Achieved"
-                            android:textColor="@android:color/white"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:text=" :  "
-                            android:textColor="@android:color/white"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/credits_achieved"
-                            android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:text=""
-                            android:textColor="@android:color/white" />
-                    </TableRow>
-
-                    <TableRow
-                        android:id="@+id/TableRow04"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dip" >
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:text="CGPA"
-                            android:textColor="@android:color/white"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:text=" :  "
-                            android:textColor="@android:color/white"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/myacc_cgpa"
-                            android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:text=""
-                            android:textColor="@android:color/white" />
-
-                    </TableRow>
-
-                    <TableRow
-                        android:id="@+id/TableRow04"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dip" >
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:text="Fee Due"
-                            android:textColor="@android:color/white"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:text=" :  "
-                            android:textColor="@android:color/white"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/myacc_feedue"
-                            android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:text=""
-                            android:textColor="@android:color/white" />
-                    </TableRow>
-
-                    <TableRow
-                        android:id="@+id/TableRow04"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dip" >
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:text="Due Time"
-                            android:textColor="@android:color/white"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:text=" :  "
-                            android:textColor="@android:color/white"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/myacc_duetime"
-                            android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:text=""
-                            android:textColor="@android:color/white" />
-                    </TableRow>
-                </TableLayout>
-
+			<ScrollView 
+			    android:layout_width="match_parent"
+			    android:layout_height="wrap_content"
+			    >
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dip"
-                    android:gravity="center"
-                    android:orientation="horizontal" >
+                    android:layout_marginLeft="10dip"
+                    android:layout_marginRight="10dip"
+                    android:background="@drawable/watermark"
+                    android:orientation="vertical" >
 
-                    <TextView
-                        android:id="@+id/myaccount_label_logouttime"
+                    <TableLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" >
+
+                        <TableRow
+                            android:id="@+id/TableRow04"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dip" >
+
+                            <TextView
+                                android:id="@+id/myacc_label_username"
+                                android:layout_width="0dip"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="@string/username"
+                                android:textColor="#ffffff"
+                                android:textSize="15sp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:text=" :  "
+                                android:textColor="@android:color/white"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/myaccount_tv_username"
+                                style="@style/LatestUpdatesTextViews"
+                                android:paddingLeft="10dip" />
+                        </TableRow>
+
+                        <TableRow
+                            android:id="@+id/TableRow04"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dip" >
+
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
+                                android:text="Credits Achieved"
+                                android:textColor="@android:color/white"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:text=" :  "
+                                android:textColor="@android:color/white"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/credits_achieved"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
+                                android:text=""
+                                android:textColor="@android:color/white" />
+                        </TableRow>
+
+                        <TableRow
+                            android:id="@+id/TableRow04"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dip" >
+
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
+                                android:text="CGPA"
+                                android:textColor="@android:color/white"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:text=" :  "
+                                android:textColor="@android:color/white"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/myacc_cgpa"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
+                                android:text=""
+                                android:textColor="@android:color/white" />
+                        </TableRow>
+
+                        <TableRow
+                            android:id="@+id/TableRow04"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dip" >
+
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
+                                android:text="Fee Due"
+                                android:textColor="@android:color/white"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:text=" :  "
+                                android:textColor="@android:color/white"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/myacc_feedue"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
+                                android:text=""
+                                android:textColor="@android:color/white" />
+                        </TableRow>
+
+                        <TableRow
+                            android:id="@+id/TableRow04"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dip" >
+
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
+                                android:text="Due Time"
+                                android:textColor="@android:color/white"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:text=" :  "
+                                android:textColor="@android:color/white"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/myacc_duetime"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
+                                android:text=""
+                                android:textColor="@android:color/white" />
+                        </TableRow>
+                    </TableLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dip"
+                        android:gravity="center"
+                        android:orientation="horizontal" >
+
+                        <TextView
+                            android:id="@+id/myaccount_label_logouttime"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="@string/logout_time"
+                            android:textColor="#ffffff"
+                            android:textStyle="bold" />
+
+                        <Spinner
+                            android:id="@+id/myaccount_spinner_logouttime"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" />
+
+                        <Spinner
+                            android:id="@+id/numbers_spinner"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" />
+                    </LinearLayout>
+
+                    <Button
+                        android:id="@+id/myaccount_btn_changepwd"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@string/logout_time"
-                        android:textColor="#ffffff"
+                        android:layout_marginTop="10dip"
+                        android:background="@drawable/btn_default_1"
+                        android:text="@string/change_pwd"
+                        android:textColor="@android:color/white"
                         android:textStyle="bold" />
-
-                    <Spinner
-                        android:id="@+id/myaccount_spinner_logouttime"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1" />
-
-                    <Spinner
-                        android:id="@+id/numbers_spinner"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1" />
                 </LinearLayout>
-
-                <Button
-                    android:id="@+id/myaccount_btn_changepwd"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/btn_default_1"
-                    android:layout_marginTop="10dip"
-                    android:textColor="@android:color/white"
-                    android:textStyle="bold"
-                    android:text="@string/change_pwd" />
-            </LinearLayout>
+            </ScrollView>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
